# tone-def

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  _test_retriever.py  app.py  project_state.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/skills/: README.md
.github/skills/ai-workflow/: SKILL.md
.github/skills/ds-eda/: SKILL.md
.github/skills/ds-evaluation/: SKILL.md
.github/skills/ds-modelling/: SKILL.md
.github/skills/ds-stats/: SKILL.md
.github/skills/ds-visualisation/: SKILL.md
.github/skills/ds-workflow/: SKILL.md
.github/skills/llm-api/: SKILL.md
.github/skills/llm-evaluation/: SKILL.md
.github/skills/llm-prompts/: SKILL.md
.github/skills/llm-rag/: SKILL.md
.github/skills/llm-safety/: SKILL.md
.github/skills/llm-schemas/: SKILL.md
.github/skills/llm-testing/: SKILL.md
.github/skills/marimo/: SKILL.md
.github/skills/streamlit/: SKILL.md
.github/workflows/: CI.yaml  evals.yaml
.streamlit/: config.toml
data/: README.md
data/processed/: crp_enum_lookup.json  tonal_descriptors.json
docs/: README.md
docs/decisions/: README.md
evals/: README.md
evals/datasets/: preset_component_validity.jsonl  prompt_rendering.jsonl  retrieval_quality.jsonl
evals/golden/: preset_component_validity_expected.json  prompt_rendering_expected.json  retrieval_quality_expected.json
examples/: README.md
notebooks/marimo/: 01_exploration.py  01_ngrr_preset_builder.py  01_test_api.py  02_component_schema_parser.py  02_ngrr_preset_builder.py  02_stats_quickstart.py  03_tag_catalogue_builder.py  04_component_mapping_generation.py  04_phase1_evaluation.py  05_retrieval_evaluation.py  05_tag_catalogue_builder.py  06_chromadb_query.py  06_phase2_component_pipeline.py  06_phase2_evaluation.py  07_chromadb_retrieval.py  07_end_to_end.py  08_crp_evaluation.py  08_exemplar_store.py  09_diagnose_pipeline.py
reports/: README.md  architecture.md
scripts/: README.md  _analyze_modes.py  _audit_ranges.py  _check_factory_formats.py  _verify_cab.py  build_amp_cabinet_lookup.py  build_component_schema.py  build_crp_lookup.py  build_exemplar_index.py  build_manual_chunks.py  build_parameter_annotations.py  build_retrieval_index.py  build_tag_catalogue.py  check_pipeline.py  diagnose_pipeline.py  generate_component_mapping.py  promote_component_mapping.py
src/tonedef/: __init__.py  cache.py  client.py  component_mapper.py  crp_lookup.py  exemplar_store.py  health.py  llm_usage.py  log.py  manual_parser.py  models.py  ngrr_builder.py  ngrr_parser.py  paths.py  pipeline.py  preset_builder.py  prompt.py  prompts.py  retriever.py  settings.py  signal_chain_parser.py  tonal_vocab.py  tracing.py  validation.py  xml_builder.py
src/tonedef/prompt_templates/: __init__.py  exemplar_refinement_prompt.jinja  system_prompt.jinja
src/tonedef/schemas/: __init__.py
tests/: test_app_smoke.py  test_cache.py  test_client.py  test_component_mapper.py  test_crp_lookup.py  test_eval_fixtures.py  test_eval_scaffold.py  test_exemplar_store.py  test_health.py  test_integration.py  test_llm_usage.py  test_manual_parser.py  test_models.py  test_ngrr_builder.py  test_ngrr_parser.py  test_pipeline.py  test_preset_builder.py  test_prompt_templates.py  test_prompts.py  test_retriever.py  test_schemas.py  test_signal_chain_parser.py  test_smoke.py  test_tonal_vocab.py  test_tracing.py  test_validation.py  test_xml_builder.py
ui/: __init__.py  components.py  style.css
