[build-system]
# Build backend for the project
# Keeping a build step in CI is useful as a validation check even though this
# template is primarily designed for checked-out repo usage

requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Package name, currently a placeholder
name = "tonedef"

# Don't also define __version__ in __init__.py — importlib.metadata reads
# this value at runtime. One place to change it = zero drift
version = "0.1.0"

description = "Web application and prompt interface for guitarists to find ther ultimate tone"
readme = "README.md"

# Minimum supported Python version for the project
# Ruff and ty can infer the project Python version from here
requires-python = ">=3.13"

authors = [{ name = "Dave", email = "dave@dave.com" }]

license = { file = "LICENSE" }

# settings.py uses pydantic-settings for typed, auditable runtime configuration
# This handles .env loading, environment variable overrides, and type coercion
dependencies = [
    "anthropic>=0.84.0",
    "chromadb>=1.5.5",
    "pdfplumber>=0.11.9",
    "prompt>=0.4.1",
    "pydantic-settings",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
# Dev-only tools: linting, typing, tests, coverage, hooks
# uv treats the "dev" group specially and syncs it by default
dev = [
    "ruff",
    "mypy",
    # ty is Astral's next-generation type checker — faster than mypy but pre-1.0
    # as of early 2026, meaning it can produce false positives on complex library
    # types (polars, numpy, scipy) that mypy handles reliably
    # To try it: uv add --dev ty, then run: uv run ty check
    # Switch it in here when ty reaches stable and you have verified it handles
    # your codebase cleanly — track releases at https://github.com/astral-sh/ty
    # "ty",
    "pytest",
    "pytest-cov",
    "pre-commit",
]
# marimo is the notebook/app workflow for this template,
# let's keep exploratory work Git-friendly and Python-native
notebook = [
    "marimo[lsp,recommended]",
]

# Core dataframe/array stack
# This gives you polars + Arrow interoperability without forcing ML deps
data = [
    "numpy",
    "polars",
    "pyarrow",
]

data-pandas = [
    "pandas",
    "pandas-stubs",
]

# Classical statistics and hypothesis testing
# SciPy provides scipy.stats tests, distributions, resampling
# statsmodels provides verbose summaries and formula based modelling
stats = [
  "scipy",
  "statsmodels",
]

# Runtime dataframe validation
# pandera supports multiple dataframe libraries, including pandas and polars
validation = [
    "pandera[polars]",
]

# Static plotting / publication-style figures / EDA
vis-static = [
    "matplotlib",
    "seaborn",
]

# Interactive plots for exploration, demos, and marimo apps
vis-interactive = [
    "plotly",
]

# Small, portable default ML group
# scikit-learn is still the best baseline starter for many DS projects
ml = [
    "scikit-learn",
]

# Application front end development group
# Streamlit is the best/easiest for interactive DS projects
app = [
    "streamlit",
]

[tool.uv]
# Make default group behavior obvious
# plain "uv sync" installs the base project + dev tools
# Other groups stay opt-in so the starter doesn't become bloated by default
# i.e. you'll need to explicitly tell uv to install them...
default-groups = ["dev", "notebook", "data", "stats"]

[tool.hatch.build.targets.wheel]
# Keep src imports honest and let CI catch packaging drift
packages = ["src/tonedef"]

[tool.pytest.ini_options]
# Require a modern pytest
minversion = "8.0"

# Keep tests at the repo root instead of mixing them into src/
testpaths = ["tests"]

# Good defaults for CI and local runs:
# -ra: show extra summary info
# --strict-config: fail on bad pytest config
# --strict-markers: fail on unknown markers instead of silently accepting typos
# --cov: measure coverage for the package, not random files
# --cov-report=term-missing:skip-covered: useful signal without too much noise
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=tonedef",
    "--cov-report=term-missing:skip-covered",
]

# If an expected-fail test suddenly passes, show it
xfail_strict = true

[tool.coverage.run]
# Branch coverage is more useful than line-only coverage
branch = true

# Only measure your package, not tests or tooling code.
source = ["tonedef"]

[tool.coverage.report]
show_missing = true
skip_covered = true

# Common exclusions that usually aren't worth counting
# coverage.py documents exclude_also for adding custom exclusions like these
exclude_also = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "raise AssertionError",
]

[tool.ruff]
# 100 is a practical line length for DS code, chain-heavy code, and docstrings
line-length = 100

# Tell Ruff that src/ is the package root for import classification
src = ["src"]

# Pin Ruff's behaviour to the project's chosen Python version so formatting
# is identical regardless of which Python interpreter is actually running.
target-version = "py313"

# Ignore non-code artifact areas common in DS repos
# This keeps Ruff focused on real source files
extend-exclude = [
    "data",
    "models",
    "reports",
]

[tool.ruff.lint]
# Keep preview off in a template unless you intentionally want unstable rules/fixes
preview = false

# Explicit rule selection is easier to control than ALL
# This set provides a strong default without making life a total misery
select = [
    "E4",   # pycodestyle import / syntax-related errors
    "E7",
    "E9",
    "F",    # pyflakes correctness checks
    "I",    # import sorting
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplifications
    "C4",   # comprehensions
    "PIE",  # small correctness / cleanup wins
    "RUF",  # Ruff-native rules
    # ANN enforces type annotations on all function arguments and return values
    # in src/ — this is intentionally strict and reflects the template's view
    # that analytical code benefits from explicit types for readability and
    # for catching subtle bugs (wrong return type, unexpected None, etc)
    #
    # If this feels too aggressive for your project's current stage, you can
    # relax it in two ways:
    #
    # Option 1 — disable ANN entirely by removing it from this list
    #
    # Option 2 — keep it but ignore specific rules that are causing noise:
    #   "ANN001"  missing argument annotation
    #   "ANN201"  missing return type on public function
    #   "ANN202"  missing return type on private function
    #
    # Add whichever you want to the ignore list below
    "ANN",  # type annotation coverage
    "NPY",  # NumPy-specific checks
    "PD",   # pandas-vet rules
]

ignore = [
    "ANN401", # don't force removal of Any everywhere
    "PD008",  # allow .at
    "PD009",  # allow .iat
]

[tool.ruff.lint.per-file-ignores]
# Tests can be less strict about annotations
"tests/**/*.py" = ["ANN"]

# marimo files are exploratory / notebook-like.
# Keep them clean, but don't force full production-style typing there
"notebooks/**/*.py" = ["ANN", "F401", "F841"]

# Re-exports in __init__.py are normal
"__init__.py" = ["F401"]

[tool.ruff.lint.flake8-annotations]
# Actually enforce annotation coverage
ignore-fully-untyped = false

[tool.ruff.lint.isort]
# Tell ruff which package is this project's own code
# Without this, ruff may classify it as third-party and sort imports incorrectly
known-first-party = ["tonedef"]

[tool.ruff.format]
# Stay on stable formatter behavior
preview = false

# Also format Python code in docstrings
docstring-code-format = true

# type checking

# ty (for when it comes stable)

[tool.ty.src]
# Type-check package code and tests
include = ["src", "tests"]

[tool.ty.terminal]
# Cleaner terminal output
output-format = "concise"

#mypy

# mypy is the primary type checker for this project
# It is run in CI and can be run locally with: uv run mypy src tests
#
# strict mode is intentionally off — it requires annotations everywhere
# including on third-party code, which is too aggressive for analytical projects
# The settings below give you reliable, trustworthy errors without that overhead
[tool.mypy]
python_version = "3.13"

# Warn when a function returns Any without explicitly annotating it as such
warn_return_any = true

# Warn about mypy config options that have no effect
warn_unused_configs = true

# Warn when code is unreachable due to type narrowing
warn_unreachable = true

# Don't crash on missing stubs for third-party libraries
# Many DS libraries have partial or missing stubs — this makes mypy usable
# without requiring stub packages for every dependency
ignore_missing_imports = true

# Check the bodies of functions that have no annotations
# Without this, unannotated functions are silently skipped
check_untyped_defs = true

# Disallow calling untyped functions from typed ones
disallow_untyped_calls = false

# Per-module overrides for libraries with known stub gaps
[[tool.mypy.overrides]]
# statsmodels has limited stubs — silence the noise until upstream improves
module = ["statsmodels.*"]
ignore_errors = true
